Bug 163212 - LO Writer not showing svg properly
Summary: LO Writer not showing svg properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2024-09-30 05:00 UTC by Benjamim Sousa
Modified: 2024-10-05 18:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
SVG with such issue (19.15 KB, image/svg+xml)
2024-09-30 05:04 UTC, Benjamim Sousa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamim Sousa 2024-09-30 05:00:18 UTC
Description:
When i import the svg files some of them doesn't show properly, some elements are "hidden".

Version: 24.2.6.2 (X86_64) / LibreOffice Community
Build ID: ef66aa7e36a1bb8e65bfbc63aba53045a14d0871
CPU threads: 24; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: pt-BR (pt_BR); UI: en-US
Calc: CL threaded

Steps to Reproduce:
1. Import the svg from the attachment

Actual Results:
Some of the svg ones aint showing properly

Expected Results:
Get the svg files showing properly


Reproducible: Sometimes


User Profile Reset: No

Additional Info:
Also ocurring with:
Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 24; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: pt-BR (pt_BR); UI: en-US
Calc: CL threaded
Comment 1 Benjamim Sousa 2024-09-30 05:04:01 UTC
Created attachment 196792 [details]
SVG with such issue

After importing the vertex are hidden
Comment 2 V Stuart Foote 2024-09-30 13:41:06 UTC
Confirmed. The circles marking the corner vertices at the 90° are not rendered.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7198c5e49eff0b82cb423424eaed0ee94d66db7d
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

likewise 24.8.2.1 and 24.2.6.2
Comment 3 Xisco Faulí 2024-09-30 13:48:45 UTC
Also reproduced in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f227b0dd912d4c70a01eb3872fff15d52de543a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2024-10-02 12:32:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/16684eb4baab740fddc443490b19bf64af2be8e3

tdf#163212: context-fill/context-stroke can also use gradients

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-10-05 18:04:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/fcd2db0dff13ac592573c53c7da5fa6844695514

tdf#163212: context-fill/context-stroke can also use gradients

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.